[11.1 | 3.1] Fixed the wikipedia links and added scoring to matching view